# einburgerungstest2026

./: .env.example  .gitignore  Cargo.toml  README.md  questions-answers-dataset.json
src/: ai.rs  main.rs  memory.rs  models.rs  quiz.rs  routes.rs  storage.rs
static/: app.js  index.html  style.css
