[package]
name = "einburgerungstest2026"
version = "0.1.0"
default-run = "einburgerungstest2026"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
